# x402-inspect

./: README.md  pyproject.toml
.github/workflows/: publish.yml
tests/: test_core.py
x402_inspect/: __init__.py  cli.py  core.py
