[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "x402-inspect"
version = "0.1.0"
description = "Decode and validate x402 protocol messages (payment headers/payloads) from the CLI."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
keywords = ["x402", "payments", "agent-payments", "stablecoin", "cli", "validation"]
authors = [{ name = "Cedric Conday", email = "neumann.alpha@gmail.com" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/CedricConday/x402-inspect"
Issues = "https://github.com/CedricConday/x402-inspect/issues"

[project.scripts]
x402-inspect = "x402_inspect.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["x402_inspect"]
